[package]
name = "ibex_core"
version = "0.1.0"
edition = "2021"
description = "Core for Ibex templating"
license = "MIT"
documentation = "https://docs.rs/ibex/latest/ibex"
repository = "https://github.com/darccyy/ibex"
authors = ["darcy"]
keywords = ["html", "templating", "ssg", "web", "macro"]

[dependencies]
