[package]
name = "ibex_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for Ibex templating"
license = "MIT"
documentation = "https://docs.rs/ibex/latest/ibex"
repository = "https://github.com/dxrcy/ibex"
readme = "../README.md"
authors = ["darcy"]
keywords = ["html", "templating", "ssg", "web", "macro"]

[lib]
proc_macro = true

[dependencies]
ibex_core = { path = "../core", version = "0.1.0" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
